// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`OpenTUI screen snapshots ready, typing and result at 80x24: ready 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

          punct numbers │ time words quote zen custom │ 10 25 50 100 2






 0/2                                                                    english

 cat dog







 ^r restart  F7 repeat  F8 finish  F2 mode  F3 punct  F4 numbers  F5/F6 length

 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots ready, typing and result at 80x24: result with chart 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

 wpm                   ── raw   ── wpm   x errors
 ▀▀█ █▀█            36 ⠉⠉⠉⠉⠓⠒⠒⠒⠒⠒⠒⠦⠤⠤⠤⠤⠤⠤⢤⣀⣀⣀⣀⣀⣀⣀
 █▀▀ █▀█                                        ⠈⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠙⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒
 ▀▀▀ ▀▀▀

 acc
 ▀█  █▀█ █▀█ ▀ █     0
  █  █ █ █ █  █
 ▀▀▀ ▀▀▀ ▀▀▀ █ ▄       0s                                                  3.0s

 test type    raw    characters    consistency    time
 words 2      28     7/0/0/0       80%            3.00s
 english

 not saved: too short


 enter next test  F7 repeat  r replay  ^o history

 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots ready, typing and result at 80x24: replay 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

 last test replay · paused · 1×

 0.0 / 3.0s

 cat dog


 space play/pause  ←→ seek 1s  home/end jump  s speed  esc back











 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots ready, typing and result at 80x24: empty history 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

  local    0 tests

 no saved tests match















 ↑↓ select  enter details  tab local/TUI/web  f filters  x clear  r reload
 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots compact ready and result at 80x20: compact ready 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

          punct numbers │ time words quote zen custom │ 10 25 50 100 2




 0/2                                                                    english

 cat dog





 ^r restart  F7 repeat  F8 finish  F2 mode  F3 punct  F4 numbers  F5/F6 length

 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots compact ready and result at 80x20: compact result 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

 wpm        acc
 ▀▀█ █▀█    ▀█  █▀█ █▀█ ▀ █
 █▀▀ █▀█     █  █ █ █ █  █
 ▀▀▀ ▀▀▀    ▀▀▀ ▀▀▀ ▀▀▀ █ ▄

 test type    raw    characters    consistency    time
 words 2      28     7/0/0/0       80%            3.00s
 english

 not saved: too short



 enter next test  F7 repeat  r replay  ^o history

 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots resize prompt at 40x16: resize prompt 1`] = `
"
 oxytype

 Resize terminal to at least 80×20.
 Current: 40×16.

 Ctrl+C quit









"
`;

exports[`OpenTUI screen snapshots settings and palette search: behavior settings 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

  behavior  input  sound  caret  appearance  hide elements  theme  danger zone

 test behavior ────────────────────────────────────────────────────────────────
 ▌  difficulty                    normal   expert   master
    quick restart                 off   esc   tab   enter
    repeat quotes                 off   typing
    blind mode                    off   on
    always show words history     off   on   web only
    single list command palette   manual   on
    command palette shortcut     Mod+K · terminal ^p  web only
 speed & accuracy ─────────────────────────────────────────────────────────────
    min speed                     off   custom   100 wpm
    min accuracy                  off   custom   90%
    min word burst                off   fixed   flex   100 wpm
 language ─────────────────────────────────────────────────────────────────────
 Normal is the classic typing test experience. Expert fails the test if you
 submit (press space) an incorrect word. Master fails if you press a single
 incorrect key (meaning you have to achieve 100% accuracy).
 ↑↓ select  ←→ change  enter edit  r reset  / search  tab section
 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots settings and palette search: theme palette 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

  behavior  input  sound  caret  appearance  hide elements  theme  danger zone
  ╭─ commands ───────────────────────────────────────────────────────────────╮
 t│ > theme                                                                  │─
 ▌│ ──────────────────────────────────────────────────────────────────────── │
  │ ▌   Theme › 8008                                                         │
  │     Theme › 80s after dark                                               │
  │     Theme › 9009                                                         │
  │     Theme › aether                                                       │
  │     Theme › alduin                                                       │
  │     Theme › alpine                                                       │
 s│     Theme › anti hero                                                    │─
  │     Theme › arch                                                         │
  │     Theme › aurora                                                       │
  │     Theme › beach                                                        │
 l│     Theme › bento                                                        │─
 N│     Theme › bingsu                                                       │
 s│ 1/197                                                                    │
 i│ enter select  tab/↑↓ move  esc back                                      │
 ↑╰──────────────────────────────────────────────────────────────────────────╯
 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots custom screen: custom 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

 custom text · repeat · 9 word · pipe off

 The quick brown fox jumps over the lazy dog





 e edit  n new  o options  enter type  s save  l load  d delete

 saved texts

 no saved texts






 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots funboxes screen: funboxes 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

 funboxes · type to search
  search funboxes

 ▌ [ ] 58008 · shared words
   [ ] mirror · browser only
   [ ] upside down · browser only
   [ ] nausea · browser only
   [ ] round round baby · browser only
   [ ] simon says · browser only
   [ ] tts · browser only
   [ ] choo choo · browser only
 1/48

 A special mode for accountants.



 shared compatibility and forced settings apply
 ↑↓ select  enter toggle
 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots challenges screen: challenges 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

 challenges · type to search
  search challenges

 ▌ 6969696969 · other
   One Hour Warrior · endurance
   Double Down · endurance
   Triple Trouble · endurance
   Quaaaaad · endurance
   8 Ball · endurance
   The Big 12 · endurance
   1 Day · endurance
 1/53

 Complete a 69-second test and achieve 69 WPM, 69 raw, 69% accuracy, and 69%
 consistency.


 scripts download once · Wingdings requires a browser
 ↑↓ select  enter start
 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots account screen: account 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

 account service unavailable


















 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;

exports[`OpenTUI screen snapshots leaderboards screen: leaderboards 1`] = `
"
 oxytype   test   settings   account   leaderboards   history       serika dark

 tab  all-time    c  tui    l  english    m  time 15

 API service unavailable
















 esc back  ^t test  ^s settings  ^a acct  ^l ranks  ^o history  ^p cmd  ^c quit

"
`;
